--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   padding: 20px 10px;
+  height: 60px
   /* border-bottom: 1px solid rgb(226, 226, 226); */
 }
 
