[#38]fix: 검색 상자 위치 수정 및 폰트 수정

--- a/src/pages/BookRegister/BookSearch.module.css
+++ b/src/pages/BookRegister/BookSearch.module.css
@@ -20,9 +20,10 @@
 
 .searchInputWrapper input {
   width: 100%;
-  padding: 20px;
+  height: 70px;
+  padding: 10px 30px;
   padding-right: 40px;
-  font-size: 16px;
+  font-size: 26px;
   border: 2px solid var(--accent-sub-color);
   border-radius: 30px;
   outline: none;
