--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -8,6 +8,7 @@
   visibility: hidden;
   opacity: 1 !important;
   transition: visibility 0s, right 0.3s ease;
+  z-index: 1000;    /* 투명하게 보이는 문제 해결을 위해서 z-index 값 */
 }
 
 .header_sidebar.sidebar_open {
