--- a/src/pages/BookList/BookList.css
+++ b/src/pages/BookList/BookList.css
@@ -21,10 +21,10 @@
   display: flex;
   flex-direction: row;
   padding: 20px;
-  width: 70%;
+  width: 90%;
   border-radius: 15px;
   background-color: var(--sub-color);
-  gap: 40px;
+  justify-content: space-between;
 }
 
 .bookDescription {
@@ -32,6 +32,7 @@
   flex-direction: column;
   justify-content: center;
   gap: 10px;
+  width: 50%;
 }
 
 .bookDescription > h3 {
@@ -72,4 +73,52 @@
   width: 200px;
   border-radius: 5px;
   border: 1px solid gray;
+}
+
+.bookStatus {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.bookStatusIcon {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 30px;
+}
+
+.bookStatusIcon > button {
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+}
+
+.bookStatusDong {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.bookStatusDong > button {
+  width: 80%;
+  height: 30px;
+  color: white;
+  background-color: var(--accent-sub-color);
+  border-radius: 5px;
+  border: none;
+}
+
+.bookImageContainer {
+  position: relative;
+  display: inline-block;
+}
+
+.qualityEmoticon {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  width: 30px;
+  height: 30px;
+  z-index: 1;
 }
