--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -57,7 +57,7 @@
   flex-direction: column;
   gap: 10px;
   margin-top: 20px;
-  width: 300px;
+  width: 410px;
 }
 
 .input_button2 > div {
@@ -66,7 +66,7 @@
 }
 
 .input_button2 input {
-  width: 180px;
+  width: 280px;
   height: 30px;
   border-radius: 5px;
   border: 1px solid gray;
@@ -90,4 +90,29 @@
   height: 30px;
   margin-top: 20px;
   cursor: pointer;
+}
+
+.chooseAreaContainer {
+  flex-direction: column;
+}
+
+.chooseAreaContainer > label {
+  justify-content: flex-start;
+}
+
+.AreaContainerInner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.AreaContainerInner select {
+  width: 120px;
+  height: 30px;
+}
+
+.AreaContainerInner > div {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
 }
