[#73]feat: 우주도서 목록조회 지정 및 수정 조회 완전 완료

--- a/src/pages/BookList/BookList.css
+++ b/src/pages/BookList/BookList.css
@@ -133,11 +133,16 @@
 }
 
 
-.areaSelectorContainer > div > select {
+.areaSelectorContainer > div select {
   height: 100%;
 }
 
 .areaSelectorContainer > div {
+  display: flex;
+  gap: 5px;
+}
+
+.areaSelectorContainer > div > div {
   display: flex;
   gap: 5px;
 }
