[#103] feat: 내 활동 내역 조회 제목 및 상세보기 추가

--- a/src/pages/BookRegister/Modal.module.css
+++ b/src/pages/BookRegister/Modal.module.css
@@ -28,9 +28,14 @@
 }
 
 .closeButton {
+  position: sticky;
+  top: 0;
+  float: right;
+  background-color: white;
+  border: none;
   padding: 10px;
-  font-size: 16px;
+  font-size: 30px;
   cursor: pointer;
-  margin-top: 10px;
   align-self: center;
+  z-index: 1;
 }
