--- a/src/pages/MyActivity/Exchange.module.css
+++ b/src/pages/MyActivity/Exchange.module.css
@@ -1,9 +1,73 @@
 .exchangeContainer {
-  padding: 20px;
+  padding: 10px 0;
 }
 
 .emptyList {
   text-align: center;
   padding: 20px;
   color: #888;
+}
+
+.modalBook {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.senderBook, .receiverBook {
+  width: 45%;
+}
+
+.senderBook img, .receiverBook img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.receiverBook {
+  text-align: right;
+}
+
+.receiverBook > * {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.receiverBook img {
+  margin-left: auto;
+}
+
+.modalBook h2, .exchangeInfo h2{
+  margin: 15px 0 5px 0;
+  font-weight: bold;
+}
+
+.modalButton {
+  display: block;
+  width: 120px;
+  padding: 12px 20px;
+  background-color: var(--accent-color);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.buttons {
+  display: flex;
+}
+
+.exchangeBook {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.listHeader {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  padding: 10px 20px;
 }
