--- a/src/pages/MyActivity/Extension.module.css
+++ b/src/pages/MyActivity/Extension.module.css
@@ -1,9 +1,73 @@
 .extensionContainer {
-  padding: 20px;
+  padding: 10px 0;
 }
 
 .emptyList {
   text-align: center;
   padding: 20px;
   color: #888;
+}
+
+.listItem {
+  width: 100%;
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modalBook {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.modalBookImg {
+  width: 50%;
+}
+
+.modalBookInfo {
+  width: 50%;
+  padding: 0 20px;
+}
+
+.modalBookInfo h2 {
+  margin: 15px 0 5px 0;
+  font-weight: bold;
+}
+
+.modalBookImg img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.rentalInfo {
+  margin-bottom: 30px;
+}
+
+.rentalInfo h2 {
+  margin: 15px 0 5px 0;
+  font-weight: bold;
+}
+
+.modalButton {
+  display: block;
+  width: 120px;
+  padding: 12px 20px;
+  background-color: var(--accent-color);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.buttons {
+  display: flex;
+}
+
+.listHeader {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  padding: 10px 20px;
 }
