--- a/src/pages/BookRegister/SelectedBook.module.css
+++ b/src/pages/BookRegister/SelectedBook.module.css
@@ -111,3 +111,13 @@
 .statusBoth {
   color: var(--contrast-color);
 }
+
+.checkboxGroup label {
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.checkboxGroup input[type="checkbox"] {
+  margin-right: 5px;
+  cursor: pointer; /* Add this line */
+}
