--- a/src/pages/MyLibrary/MyLibrary.module.css
+++ b/src/pages/MyLibrary/MyLibrary.module.css
@@ -1,9 +1,35 @@
 .main {
   padding: 20px;
-  background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
+  align-items: center; 
+  height: calc(100vh - 105px);  /* 헤더 60px, 타이틀 박스 45px > 105px */
+  overflow-y: auto;
+}
+
+/* WebKit browsers (Chrome, Safari) */
+.main::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+.main::-webkit-scrollbar-thumb {
+  background: var(--accent-sub-color);
+  border-radius: 10px;
+}
+
+.main::-webkit-scrollbar-track {
+  background: var(--main-color);
+}
+
+.titleDiv {
+  padding: 10px 20px;
+  font-size: 22px;
+  height: 45px;
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
+  gap: 10px;
 }
 
 .libraryTitle {
@@ -15,10 +41,13 @@
 .categoriesContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 20px;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-top: 20px;
   width: 100%;
+  padding: 25px 30px;
+  background-color: #C8AC95;
+  border-radius: 10px;
 }
 
 .createButton {
@@ -28,10 +57,27 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin-top: 20px;
   transition: background-color 0.3s;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5); /* 그림자 추가 */
 }
 
 .createButton:hover {
   background-color: var(--accent-sub-color);
+}
+
+.informationBox {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.infoInner {
+  display: flex;
+  flex-direction: column;
+}
+
+.infoInner > div {
+  display: flex;
+  gap: 5px;
 }
