--- a/src/pages/MyPage/MyPage.module.css
+++ b/src/pages/MyPage/MyPage.module.css
@@ -1,3 +1,12 @@
+.titleDiv {
+  padding: 10px 20px;
+  font-size: 22px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+}
+
 .MyPage {
   display: flex;
   flex-direction: column;
