Fe fix 114 관심등록수정

--- a/src/components/Chatting/ChatModal.module.css
+++ b/src/components/Chatting/ChatModal.module.css
@@ -8,9 +8,9 @@
   width: 1px;
 }
 
-:global(.MuiBackdrop-root) {
+/* :global(.MuiBackdrop-root) {
   background-color: rgba(0, 0, 0, 0) !important;
-}
+} */
 
 :global(.MuiListItem-root:hover) {
   background-color: #f0f0f0;
