--- a/src/pages/MyBook/Liked.module.css
+++ b/src/pages/MyBook/Liked.module.css
@@ -1,7 +1,3 @@
-.likedContainer {
-  padding: 20px;
-}
-
 .emptyList {
   text-align: center;
   padding: 20px;
@@ -10,8 +6,8 @@
 
 .liked {
   width: 80%;
-  font-size: 20px;
-  padding: 20px
+  font-size: 18px;
+  padding: 10px 20px
 }
 
 .liked > strong {
