--- a/src/pages/MyActivity/Extension.module.css
+++ b/src/pages/MyActivity/Extension.module.css
@@ -71,3 +71,18 @@
   font-weight: bold;
   padding: 10px 20px;
 }
+
+.extensionContainerInner {
+  background-color: var(--sub-color);
+  padding: 20px;
+  border-radius: 20px;
+  margin-bottom: 40px;
+}
+
+.extensionContainerInner > h2 {
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
