--- a/src/pages/MyActivity/ListComponent.module.css
+++ b/src/pages/MyActivity/ListComponent.module.css
@@ -3,16 +3,20 @@
   flex-direction: column;
   height: 300px;
   overflow-y: auto;
-  border: 1px solid #ddd;
+  border: none;
   border-radius: 4px;
   margin-bottom: 20px;
+  gap: 10px;
 }
 
 .listItem {
   display: flex;
+  align-items: center;
+  height: 50px;
   padding: 10px;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 20px;
+  background-color: var(--main-color);
 }
 
 .emptyList {
@@ -22,3 +26,5 @@
   height: 100%;
   color: #888;
 }
+
+
