--- a/src/pages/MyActivity/MyActivity.module.css
+++ b/src/pages/MyActivity/MyActivity.module.css
@@ -8,7 +8,7 @@
 }
 
 .contentDiv {
-  padding: 0 20px;
+  /* padding: 0 20px; */
 }
 
 .buttons {
@@ -16,6 +16,7 @@
   justify-content: space-between;
   margin-bottom: 20px;
   width: 100%;
+  padding: 0 20px;
 }
 
 .tab {
