Fe feat 128 내책 필터링

--- a/src/pages/MyBook/Liked.module.css
+++ b/src/pages/MyBook/Liked.module.css
@@ -14,3 +14,12 @@
   font-weight: normal;
   color: var(--contrast-color);
 }
+
+.LikedUserbooksList {
+  height: 80vh;
+  overflow: auto;
+}
+
+.LikedUserbooksList::-webkit-scrollbar {
+  display: none;
+}
