--- a/src/pages/MyBook/BookInfo.module.css
+++ b/src/pages/MyBook/BookInfo.module.css
@@ -19,6 +19,10 @@
   display: inline-block;
 }
 
+.thumbnail {
+  cursor: pointer;
+}
+
 .bookInfo {
   display: flex;
   width: 50%;
@@ -43,6 +47,10 @@
 .bookInfo strong {
   font-weight: normal;
   color: var(--contrast-color);
+}
+
+.bookTitle {
+  cursor: pointer;
 }
 
 .status {
