--- a/src/pages/MyBook/MyBook.module.css
+++ b/src/pages/MyBook/MyBook.module.css
@@ -27,34 +27,26 @@
 .selector {
   display: flex;
   width: 100%;
-  justify-content: center;
-  overflow: hidden;
-  position: relative;
-  gap: 25px;
-  padding: 10px;
+  justify-content: space-between;
+  padding: 10px 20px;
 }
 
 .selectButton {
-  width: 200px;
+  z-index: 1;
+  transition: background-color 0.5s ease;
+  flex: 1;
   padding: 10px 20px;
+  background-color: #f0f0f0;
   border: none;
   cursor: pointer;
-  outline: none;
-  background-color: var(--accent-sub-color);
-  transition: background-color 0.5s ease;
-  position: relative;
-  z-index: 1;
-  border-radius: 12px;
+  text-align: center;
 }
 
 .selectButton:hover {
-  /* font-weight: bold; */
-  color: var(--main-color);
   font-weight: bold;
 }
 
 .activeButton {
-  font-weight: bold;
   background-color: var(--accent-color);
   color: var(--main-color);
 }
