[#104] 메인화면 우주도서 개수 사용자수

--- a/src/styles/LinkItem.css
+++ b/src/styles/LinkItem.css
@@ -1,5 +1,5 @@
 .LinkItem {
-  width: 25%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,11 +12,19 @@
   color: inherit;
 }
 
+.LinkItem svg {
+  color: black; /* 기본 아이콘 색상 */
+}
+
 .LinkItem:hover, .LinkItem:focus {
   background-color: var(--accent-color);
-  color:#fff;
+  color: #fff;
   transform: scale(1.1);
-  border-radius:5px;
+  border-radius: 5px;
+}
+
+.LinkItem:hover svg, .LinkItem:focus svg {
+  color: #fff; /* hover 시 아이콘 색상 */
 }
 
 .LinkItem a {
