--- a/src/components/Chatting/ChatList.module.css
+++ b/src/components/Chatting/ChatList.module.css
@@ -1,5 +1,33 @@
-.chat_list {
+.chatList {
   flex-grow: 1;
   overflow-y: auto;
   padding: 35px 0px;
+  position: relative;
+}
+
+.sideMenuButton {
+  border-radius: 22px;
+  width: 35px;
+  height: 35px;
+  padding: 7px;
+}
+
+.chatSideMenu:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.sideMenu {
+  position: absolute;
+  right: -200px;
+  top: 0;
+  width: 200px;
+  background-color: var(--contrast-color);
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+  z-index: 1000;
+}
+
+.chatRoomItem.open .sideMenu {
+  transform: translateX(0);
 }
