--- a/src/pages/MyActivity/History.module.css
+++ b/src/pages/MyActivity/History.module.css
@@ -108,7 +108,7 @@
 .listHeader {
   display: flex;
   justify-content: space-between;
-  font-weight: bold;
+  /* font-weight: bold; */
   padding: 10px 20px;
 }
 
