--- a/src/pages/MyActivity/Extension.module.css
+++ b/src/pages/MyActivity/Extension.module.css
@@ -68,7 +68,7 @@
 .listHeader {
   display: flex;
   justify-content: space-between;
-  font-weight: bold;
+  /* font-weight: bold; */
   padding: 10px 20px;
 }
 
