--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@ html, body {
   position: relative; /* Add this line to make #root relative */
 }
 
+body {
+  overflow: hidden;
+}
+
 body * {
   font-family: "samsungGodik";
 }
