--- a/src/pages/MyPage/PasswordChange.module.css
+++ b/src/pages/MyPage/PasswordChange.module.css
@@ -8,5 +8,44 @@
 }
 
 .contentDiv {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   padding: 0 20px;
+  width: 350px;
+}
+
+.userUpdate {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  margin-top: 60px;
+  gap: 20px;
+}
+
+.submitButton {
+  width: 100%;
+  margin-top: 20px;
+  height: 40px;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  background-color: var(--accent-sub-color);
+  cursor: pointer;
+}
+
+.submitButton:hover {
+  background-color: var(--accent-color);
+}
+
+.contentDiv > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contentDiv > div > input {
+  width: 200px;
+  height: 30px;
 }
