--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -116,3 +116,21 @@
   flex-direction: row;
   gap: 5px;
 }
+
+.nicknameInput {
+  width: 200px !important;
+}
+
+.nicknameContainer {
+  display: flex;
+  gap: 20px;
+}
+
+.privacyCheck {
+  width: 20px !important;
+}
+
+.privacy-agreement {
+  justify-content: flex-end !important;
+  gap: 10px;
+}
