--- a/src/pages/MyActivity/MyActivity.module.css
+++ b/src/pages/MyActivity/MyActivity.module.css
@@ -7,16 +7,12 @@
   gap: 10px;
 }
 
-.contentDiv {
-  /* padding: 0 20px; */
-}
-
 .buttons {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
   width: 100%;
-  padding: 0 20px;
+  padding: 10px 20px;
 }
 
 .tab {
