--- a/src/pages/MyActivity/Proceed.module.css
+++ b/src/pages/MyActivity/Proceed.module.css
@@ -20,10 +20,11 @@
 }
 
 select {
-  width: 100px;
+  width: 150px;
   height: 30px;
   border-radius: 5px;
   padding: 0px 10px;
+  margin-bottom: 10px;
 }
 
 .selectBox {
