--- a/src/pages/MyActivity/Exchange.module.css
+++ b/src/pages/MyActivity/Exchange.module.css
@@ -2,6 +2,40 @@
   padding: 10px 0;
 }
 
+.exchangeContainerInner {
+  background-color: var(--sub-color);
+  padding: 20px;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out, margin-bottom 0.3s ease-out;
+  max-height: 60px;
+}
+
+.exchangeContainerInner.expanded {
+  max-height: 1000px;
+  margin-bottom: 40;
+}
+
+.exchangeContainerInner > h2 {
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.expandableContent {
+  margin-top: 20px;
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+}
+
+.expanded .expandableContent {
+  opacity: 1;
+}
+
 .emptyList {
   text-align: center;
   padding: 20px;
@@ -12,7 +46,6 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 30px;
 }
 
 .senderBook, .receiverBook {
@@ -42,27 +75,53 @@
   font-weight: bold;
 }
 
+.modalImg {
+  padding-top: 10px;
+  height: 350px;
+}
+
+.modalContent {
+  height: 40px;
+  overflow: auto;
+}
+
+.modalContent::-webkit-scrollbar {
+  display: none;
+}
+
 .modalButton {
-  display: block;
   width: 120px;
-  padding: 12px 20px;
+  padding: 10px 20px;
   background-color: var(--accent-color);
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin: 20px auto;
   text-align: center;
 }
 
 .buttons {
+  margin-top: 15px;
   display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .exchangeBook {
   display: flex;
   justify-content: space-between;
   width: 100%;
+}
+
+.exchangeBook > div {
+  width: 45%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.exchangeBook > div:last-child {
+  text-align: right;
 }
 
 .listHeader {
@@ -72,17 +131,10 @@
   padding: 10px 20px;
 }
 
-.exchangeContainerInner {
-  background-color: var(--sub-color);
-  padding: 20px;
-  border-radius: 20px;
-  margin-bottom: 40px;
+.listHeader > div {
+  width: 45%;
 }
 
-.exchangeContainerInner > h2 {
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+.listHeader > div:last-child {
+  text-align: right;
 }
